<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ConsumoViewFragment">

    <fragment
        android:id="@+id/NovoRemedioViewFragment"
        android:name="com.example.appremedio.NovoRemedioViewFragment"
        android:label="@string/novo_remedio_fragment_label"
        tools:layout="@layout/fragment_novo_remedio_view">
    </fragment>
    <fragment
        android:id="@+id/ConsumoViewFragment"
        android:name="com.example.appremedio.ConsumoViewFragment"
        android:label="@string/consumo_view_fragment_label"
        tools:layout="@layout/fragment_consumo_view">
    </fragment>

    <fragment
        android:id="@+id/NovoRemedioPessoaViewFragment"
        android:name="com.example.appremedio.NovoRemedioPessoaViewFragment"
        android:label="@string/novo_remedio_pessoa_fragment_label"
        tools:layout="@layout/fragment_novo_remedio_pessoa_view">
    </fragment>
</navigation>