<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/background_default"
    tools:context=".NovoRemedioPessoaViewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomeremedio"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.483"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:popupBackground="@color/white"
                android:spinnerMode="dropdown"
                android:minHeight="48dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intervalo" />

            <EditText
                android:id="@+id/editTextNumber"
                style="@style/BordaArredondada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/quantidade"
                android:minHeight="48dp"
                android:textSize="20sp"
                android:hint="@string/quantidade"
                android:inputType="number"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:popupBackground="@color/white"
                android:spinnerMode="dropdown"
                android:minHeight="48dp"
                android:textSize="20sp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_hora_inicio" />

            <EditText
                android:id="@+id/editTextDataHoraInicioW"
                style="@style/BordaArredondada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints="@string/data_hora_inicio"
                android:minHeight="48dp"
                android:textSize="20sp"
                android:hint="@string/data_inicio"
                android:inputType="date" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_invalida"
                android:textColor="@color/red"
                android:visibility="invisible"/>


        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/salvar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>